{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 776,
  "lineage": "c4e9c044-ffc2-3b70-37fb-26039cc690cd",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:loadbalancer/app/devops-alb/38f396512ae623d4",
            "arn_suffix": "app/devops-alb/38f396512ae623d4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-359781775.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:loadbalancer/app/devops-alb/38f396512ae623d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ee603842f3d2771"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d9f97149cf8f403"
              },
              {
                "subnet_id": "subnet-0838d54df3a0db3ac"
              }
            ],
            "subnets": [
              "subnet-01d9f97149cf8f403",
              "subnet-0838d54df3a0db3ac"
            ],
            "vpc_id": "vpc-02ee336af566d61f6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener/app/devops-alb/38f396512ae623d4/789824ea75821eac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener/app/devops-alb/38f396512ae623d4/789824ea75821eac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:loadbalancer/app/devops-alb/38f396512ae623d4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5",
            "certificate_arn": "arn:aws:acm:us-east-1:960828421635:certificate/354e07ad-76e2-4921-a459-85fe48702d1f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:loadbalancer/app/devops-alb/38f396512ae623d4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/gl-20260216131841817700000004/fe74940796fdb5a1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener-rule/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5/4e3ce50bc6a035ab",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "gitlab.omerlevy03.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener-rule/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5/4e3ce50bc6a035ab",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.gitlab",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/jk-20260216131840798400000003/bcc2b5a7b588c219",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener-rule/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5/ba24d9080cc12803",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "jenkins.omerlevy03.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener-rule/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5/ba24d9080cc12803",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.jenkins",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "weather",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/wt-20260216131841983400000005/56fb0bded428e525",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener-rule/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5/c6aff49efc209635",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "weather.omerlevy03.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener-rule/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5/c6aff49efc209635",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:listener/app/devops-alb/38f396512ae623d4/0705d17ff226c8d5",
            "priority": 30,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.weather_eks",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/gl-20260216131841817700000004/fe74940796fdb5a1",
            "arn_suffix": "targetgroup/gl-20260216131841817700000004/fe74940796fdb5a1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/users/sign_in",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/gl-20260216131841817700000004/fe74940796fdb5a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:960828421635:loadbalancer/app/devops-alb/38f396512ae623d4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gl-20260216131841817700000004",
            "name_prefix": "gl-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/jk-20260216131840798400000003/bcc2b5a7b588c219",
            "arn_suffix": "targetgroup/jk-20260216131840798400000003/bcc2b5a7b588c219",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/jk-20260216131840798400000003/bcc2b5a7b588c219",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:960828421635:loadbalancer/app/devops-alb/38f396512ae623d4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jk-20260216131840798400000003",
            "name_prefix": "jk-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "weather_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/wt-20260216131841983400000005/56fb0bded428e525",
            "arn_suffix": "targetgroup/wt-20260216131841983400000005/56fb0bded428e525",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/wt-20260216131841983400000005/56fb0bded428e525",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:960828421635:loadbalancer/app/devops-alb/38f396512ae623d4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wt-20260216131841983400000005",
            "name_prefix": "wt-",
            "port": 32300,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/gl-20260216131841817700000004/fe74940796fdb5a1-20260216131910333000000017",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/gl-20260216131841817700000004/fe74940796fdb5a1",
            "target_id": "i-052fd8898f8b75e77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.gitlab",
            "module.infrastructure.aws_iam_instance_profile.gitlab_ssm_profile",
            "module.infrastructure.aws_iam_role.gitlab_ssm_role",
            "module.infrastructure.data.aws_iam_policy_document.gitlab_ssm_assume_role",
            "module.infrastructure.module.gitlab.aws_instance.this",
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/jk-20260216131840798400000003/bcc2b5a7b588c219-20260216131903396900000016",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:960828421635:targetgroup/jk-20260216131840798400000003/bcc2b5a7b588c219",
            "target_id": "i-0e6a7901c6afccdd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.jenkins",
            "module.infrastructure.module.jenkins_controller.aws_instance.this",
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:security-group/sg-0f5bd8929e8ae3eaa",
            "description": "Allow EKS nodes to access EFS over NFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5bd8929e8ae3eaa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from EKS node security group",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0549cec2273364ba3"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "weather-app-eks-efs-sg",
            "name_prefix": "",
            "owner_id": "960828421635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2056639697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f5bd8929e8ae3eaa",
            "security_group_rule_id": "sgr-0fbdcbe13145f2af3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.aws_security_group.efs",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_ingress_nfs_from_eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NFS from EKS node security group",
            "from_port": 2049,
            "id": "sgrule-2710723976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f5bd8929e8ae3eaa",
            "security_group_rule_id": "sgr-07fac5e50065b0220",
            "self": false,
            "source_security_group_id": "sg-0549cec2273364ba3",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.aws_security_group.efs",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:security-group/sg-0657a35eb8bf35947",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0657a35eb8bf35947",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0549cec2273364ba3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "weather-app-eks-cluster-20260216131843863500000008",
            "name_prefix": "weather-app-eks-cluster-",
            "owner_id": "960828421635",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-app-eks-cluster"
            },
            "tags_all": {
              "Name": "weather-app-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infrastructure.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:security-group/sg-0549cec2273364ba3",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0549cec2273364ba3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB traffic to weather app NodePort",
                "from_port": 32300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ee603842f3d2771"
                ],
                "self": false,
                "to_port": 32300
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0657a35eb8bf35947"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0657a35eb8bf35947"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0657a35eb8bf35947"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0657a35eb8bf35947"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0657a35eb8bf35947"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0657a35eb8bf35947"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 32300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0123e88868ecdfcfe"
                ],
                "self": false,
                "to_port": 32400
              }
            ],
            "name": "weather-app-eks-node-20260216131843567700000006",
            "name_prefix": "weather-app-eks-node-",
            "owner_id": "960828421635",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-app-eks-node",
              "kubernetes.io/cluster/weather-app-eks": "owned"
            },
            "tags_all": {
              "Name": "weather-app-eks-node",
              "kubernetes.io/cluster/weather-app-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infrastructure.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1454454414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0657a35eb8bf35947",
            "security_group_rule_id": "sgr-0e2ff33494d5afbde",
            "self": false,
            "source_security_group_id": "sg-0549cec2273364ba3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infrastructure.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3776416370",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-0463017691abbda7e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2551083262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-044145f106b3e7a51",
            "self": false,
            "source_security_group_id": "sg-0657a35eb8bf35947",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1497827303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-03510c79a59d2753c",
            "self": false,
            "source_security_group_id": "sg-0657a35eb8bf35947",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2416271473",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-0acb063d9362099b6",
            "self": false,
            "source_security_group_id": "sg-0657a35eb8bf35947",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2203671632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-09e378cd447993ba0",
            "self": false,
            "source_security_group_id": "sg-0657a35eb8bf35947",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3891818395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-0f5cd54a7cdca048e",
            "self": false,
            "source_security_group_id": "sg-0657a35eb8bf35947",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3074448551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-040cdc30f0a59ae8c",
            "self": false,
            "source_security_group_id": "sg-0657a35eb8bf35947",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1490911005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-03bea561d94bd9fa0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1847443384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-00e8cd6eb0415a4e0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3393330263",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-05af7a5b620a9cd40",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_weather_nodeport_from_alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB traffic to weather app NodePort",
            "from_port": 32300,
            "id": "sgrule-4223940302",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0549cec2273364ba3",
            "security_group_rule_id": "sgr-0f5199d94eb262bd3",
            "self": false,
            "source_security_group_id": "sg-04ee603842f3d2771",
            "timeouts": null,
            "to_port": 32300,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.eks.module.eks.aws_security_group.cluster",
            "module.infrastructure.module.eks.module.eks.aws_security_group.node",
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infrastructure.module.gitlab",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0739a90584ef88b2e",
            "arn": "arn:aws:ec2:us-east-1:960828421635:instance/i-052fd8898f8b75e77",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "weather-app-eks-gitlab-ssm-profile",
            "id": "i-052fd8898f8b75e77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "gitlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084e2505b90acd01a",
            "private_dns": "ip-10-0-2-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-085d83a898f1ea5e9",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0323792cba24f82a9",
            "tags": {
              "Name": "gitlab-server"
            },
            "tags_all": {
              "Name": "gitlab-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab073853f3c9d70c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.aws_iam_instance_profile.gitlab_ssm_profile",
            "module.infrastructure.aws_iam_role.gitlab_ssm_role",
            "module.infrastructure.data.aws_iam_policy_document.gitlab_ssm_assume_role",
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.jenkins_agent",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f251bdc660bf07fb",
            "arn": "arn:aws:ec2:us-east-1:960828421635:instance/i-0f271d69d6967bfbc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f271d69d6967bfbc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gitlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7007b9bb420ec53",
            "private_dns": "ip-10-0-2-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076ad3b39e386c445",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0323792cba24f82a9",
            "tags": {
              "Name": "jenkins-agent"
            },
            "tags_all": {
              "Name": "jenkins-agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab073853f3c9d70c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.jenkins_controller",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bfb8e76522514238",
            "arn": "arn:aws:ec2:us-east-1:960828421635:instance/i-0e6a7901c6afccdd4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6a7901c6afccdd4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gitlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ad26611bbd76316",
            "private_dns": "ip-10-0-2-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03199bfd4809ea189",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0323792cba24f82a9",
            "tags": {
              "Name": "jenkins-controller"
            },
            "tags_all": {
              "Name": "jenkins-controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab073853f3c9d70c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:security-group/sg-04ee603842f3d2771",
            "description": "Allow HTTP/HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ee603842f3d2771",
            "ingress": [
              {
                "cidr_blocks": [
                  "213.57.121.34/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "213.57.121.34/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "960828421635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:security-group/sg-0c74b7f33b5367add",
            "description": "Allow SSH from internet",
            "egress": [],
            "id": "sg-0c74b7f33b5367add",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "960828421635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:security-group/sg-0ab073853f3c9d70c",
            "description": "Allow traffic only from ALB and bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab073853f3c9d70c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c74b7f33b5367add"
                ],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ee603842f3d2771"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ee603842f3d2771"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ee603842f3d2771"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_instances_sg",
            "name_prefix": "",
            "owner_id": "960828421635",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2271140462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04ee603842f3d2771",
            "security_group_rule_id": "sgr-05b56eadfa9d2cc8e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.57.121.34/32"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3156945900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ee603842f3d2771",
            "security_group_rule_id": "sgr-07f90d0818836b15d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.57.121.34/32"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1330146934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ee603842f3d2771",
            "security_group_rule_id": "sgr-01ddc2bde1a317e43",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-508280379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c74b7f33b5367add",
            "security_group_rule_id": "sgr-0daa7286a2f9baae1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.bastion_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-628586627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ab073853f3c9d70c",
            "security_group_rule_id": "sgr-01f481c4f104f8dc2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_from_alb_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-984354901",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab073853f3c9d70c",
            "security_group_rule_id": "sgr-090f7ae3fcbdc316f",
            "self": false,
            "source_security_group_id": "sg-04ee603842f3d2771",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_from_alb_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-858462858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab073853f3c9d70c",
            "security_group_rule_id": "sgr-01cc4020fb757bd2a",
            "self": false,
            "source_security_group_id": "sg-04ee603842f3d2771",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_from_alb_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-691211173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab073853f3c9d70c",
            "security_group_rule_id": "sgr-072bbd07c4a3c5b27",
            "self": false,
            "source_security_group_id": "sg-04ee603842f3d2771",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.alb_sg",
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_from_bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-352022001",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab073853f3c9d70c",
            "security_group_rule_id": "sgr-0ce6e67135dac3f28",
            "self": false,
            "source_security_group_id": "sg-0c74b7f33b5367add",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.bastion_sg",
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ssh_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1722975726",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab073853f3c9d70c",
            "security_group_rule_id": "sgr-0d6a7711d0a8dcc41",
            "self": false,
            "source_security_group_id": "sg-0ab073853f3c9d70c",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.security_groups.aws_security_group.private_instances_sg",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b962813e1471349",
            "arn": "arn:aws:ec2:us-east-1:960828421635:elastic-ip/eipalloc-06b962813e1471349",
            "association_id": "eipassoc-0858e2108dbbf3c8a",
            "domain": "vpc",
            "id": "eipalloc-06b962813e1471349",
            "network_border_group": "us-east-1",
            "network_interface": "eni-024221fcf2959c9ad",
            "private_dns": "ip-10-0-0-120.ec2.internal",
            "private_ip": "10.0.0.120",
            "public_dns": "ec2-98-94-160-21.compute-1.amazonaws.com",
            "public_ip": "98.94.160.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf_nat_eip"
            },
            "tags_all": {
              "Name": "tf_nat_eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:internet-gateway/igw-0088eac9ad5989944",
            "id": "igw-0088eac9ad5989944",
            "owner_id": "960828421635",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b962813e1471349",
            "association_id": "eipassoc-0858e2108dbbf3c8a",
            "connectivity_type": "public",
            "id": "nat-0be055d655e9562f6",
            "network_interface_id": "eni-024221fcf2959c9ad",
            "private_ip": "10.0.0.120",
            "public_ip": "98.94.160.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d9f97149cf8f403",
            "tags": {
              "Name": "tf_nat_gw"
            },
            "tags_all": {
              "Name": "tf_nat_gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_eip.nat",
            "module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-011ad4a3572a1cee41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0be055d655e9562f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011ad4a3572a1cee4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_eip.nat",
            "module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.infrastructure.module.vpc.aws_nat_gateway.this",
            "module.infrastructure.module.vpc.aws_route_table.private",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:route-table/rtb-011ad4a3572a1cee4",
            "id": "rtb-011ad4a3572a1cee4",
            "owner_id": "960828421635",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be055d655e9562f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_private_route_table"
            },
            "tags_all": {
              "Name": "tf_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:route-table/rtb-0628439e8777b78a9",
            "id": "rtb-0628439e8777b78a9",
            "owner_id": "960828421635",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0088eac9ad5989944",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public_route_table"
            },
            "tags_all": {
              "Name": "tf_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.infrastructure.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b37ba7abf3a55d1",
            "route_table_id": "rtb-011ad4a3572a1cee4",
            "subnet_id": "subnet-0323792cba24f82a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.private",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0377939d1ebb0c4f9",
            "route_table_id": "rtb-011ad4a3572a1cee4",
            "subnet_id": "subnet-0704f05d04d0f330a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.private",
            "module.infrastructure.module.vpc.aws_subnet.private",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097150351a9f4a703",
            "route_table_id": "rtb-0628439e8777b78a9",
            "subnet_id": "subnet-01d9f97149cf8f403"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.infrastructure.module.vpc.aws_route_table.public",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f72d7f5c52d5dfe",
            "route_table_id": "rtb-0628439e8777b78a9",
            "subnet_id": "subnet-0838d54df3a0db3ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_internet_gateway.this",
            "module.infrastructure.module.vpc.aws_route_table.public",
            "module.infrastructure.module.vpc.aws_subnet.public",
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:subnet/subnet-0323792cba24f82a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0323792cba24f82a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960828421635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:subnet/subnet-0704f05d04d0f330a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0704f05d04d0f330a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960828421635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:subnet/subnet-01d9f97149cf8f403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d9f97149cf8f403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960828421635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:subnet/subnet-0838d54df3a0db3ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838d54df3a0db3ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960828421635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02ee336af566d61f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.this",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960828421635:vpc/vpc-02ee336af566d61f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053be57ff4461f208",
            "default_route_table_id": "rtb-0d933d013ee28d9d2",
            "default_security_group_id": "sg-0910ed0ac777b73dd",
            "dhcp_options_id": "dopt-0171a38b13c16f628",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ee336af566d61f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d933d013ee28d9d2",
            "owner_id": "960828421635",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}